--- a/BorgataJavaFx/.classpath
+++ b/BorgataJavaFx/.classpath
@@ -23,6 +23,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/StudentDAL"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/BorgataBLL"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
